# IV_Viusalizer

./: README.md
Code/iv_visualizer-main/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  build.sh  ivbackend.proto  ivcontainer.proto
Code/iv_visualizer-main/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Code/iv_visualizer-main/scripts/: apply_style_check.sh  move_hooks.sh
Code/iv_visualizer-main/scripts/hooks/: pre-commit
Code/iv_visualizer-main/source/: CMakeLists.txt
Code/iv_visualizer-main/source/backend/: CMakeLists.txt  ServerMain.cpp
Code/iv_visualizer-main/source/backend/controller/: CMakeLists.txt  MessageConverter.cpp  MessageConverter.h  MessageHandler.cpp  MessageHandler.h
Code/iv_visualizer-main/source/backend/model/: CMakeLists.txt  DBManager.cpp  DBManager.h  DataManager.cpp  DataManager.h  Encoder.cpp  Encoder.h  FSManager.cpp  FSManager.h
Code/iv_visualizer-main/source/common/: CMakeLists.txt  Config.cpp  Config.h  ConfigContainer.cpp  ConfigContainer.h  ConfigDetector.cpp  ConfigDetector.h  ConfigGStreamer.cpp  ConfigGStreamer.h  DataFrame.cpp  DataFrame.h  DbConfig.cpp  DbConfig.h  Image.cpp  Image.h  Mask.cpp  Mask.h  SafeQueue.hpp  TimeRange.cpp  TimeRange.h  TimeRangeVector.cpp  TimeRangeVector.h
Code/iv_visualizer-main/test/: CMakeLists.txt
Code/iv_visualizer-main/test/unit_tests/: CMakeLists.txt  DBManagerTest.cpp  DataManagerTest.cpp  FSManagerTest.cpp  GrpcTest.cpp  IvAnnotationTest.cpp  MessageHandlerTest.cpp  SafeQueueTest.cpp  TimeRangeTest.cpp
Code/iv_visualizer_dummy-main-blue-pictures/iv_visualizer_dummy-main/: CMakeLists.txt  dummy.cpp  ivcontainer.proto
Code/iv_visualizer_dummy-main-blue-pictures/iv_visualizer_dummy-main/.devcontainer/: devcontainer.json
Code/iv_visualizer_frontend-main/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  clang_format.sh  ivbackend.proto  unit_test_streams.json
Code/iv_visualizer_frontend-main/.devcontainer/: Dockerfile  devcontainer.json
Code/iv_visualizer_frontend-main/scripts/: style_check.sh
Code/iv_visualizer_frontend-main/source/: CMakeLists.txt
Code/iv_visualizer_frontend-main/source/BackendConnector/: CMakeLists.txt  GrpcReader.cpp  GrpcReader.h  GrpcWriter.cpp  GrpcWriter.h  InitialisationMessage.cpp  InitialisationMessage.h  IvBackendClient.cpp  IvBackendClient.h  MessageConverter.cpp  MessageConverter.h  Reader.cpp  Reader.h  Stream.cpp  Stream.h  TimeRange.cpp  TimeRange.h  Writer.cpp  Writer.h
Code/iv_visualizer_frontend-main/source/BackendStub/: CMakeLists.txt  DataStreamMock.cpp  DataStreamMock.h  MockReader.cpp  MockReader.h  MockWriter.cpp  MockWriter.h
Code/iv_visualizer_frontend-main/source/DataStreams/: CMakeLists.txt  DataFrameRingBuffer.cpp  DataFrameRingBuffer.h  DataFrameStream.cpp  DataFrameStream.h  DataStream.cpp  DataStream.h  IvBackendStream.cpp  IvBackendStream.h
Code/iv_visualizer_frontend-main/source/Export/: CMakeLists.txt  Encoder.cpp  Encoder.h  ExportDialog.cpp  ExportDialog.h  ImageToVideoConverter.cpp  ImageToVideoConverter.h  exportdialog.ui
Code/iv_visualizer_frontend-main/source/ExportSettings/: CMakeLists.txt  JsonSettingsSerializer.cpp  JsonSettingsSerializer.h
Code/iv_visualizer_frontend-main/source/FrameData/: CMakeLists.txt
Code/iv_visualizer_frontend-main/source/FrameData/Config/: Config.cpp  Config.h  ConfigContainer.cpp  ConfigContainer.h  ConfigDetector.cpp  ConfigDetector.h  ConfigFrame.cpp  ConfigFrame.h  ConfigGStreamer.cpp  ConfigGStreamer.h  InferenceType.h  configframe.ui
Code/iv_visualizer_frontend-main/source/FrameData/Data/: BoundingBox.cpp  BoundingBox.h  DataFrame.cpp  DataFrame.h  Image.cpp  Image.h  PipelineData.cpp  PipelineData.h  RegionOfInterest.cpp  RegionOfInterest.h
Code/iv_visualizer_frontend-main/source/GraphicalUserInterface/: CMakeLists.txt  CamFrame.cpp  CamFrame.h  ClusterConfigDialog.cpp  ClusterConfigDialog.h  ClusterTreeWidget.cpp  ClusterTreeWidget.h  ConfigOfRegionOfInterestDialog.cpp  ConfigOfRegionOfInterestDialog.h  RegionOfInterestDialog.cpp  RegionOfInterestDialog.h  RegionOfInterestPainterScene.cpp  RegionOfInterestPainterScene.h  camframe.ui  clusterconfigdialog.ui  configofregionofinterestdialog.ui  regionofinterestdialog.ui
Code/iv_visualizer_frontend-main/source/Log/: CMakeLists.txt  Log.cpp  Log.h  LogDatabaseConnector.cpp  LogDatabaseConnector.h  LogDbException.cpp  LogDbException.h  LogFrame.cpp  LogFrame.h  LogType.h  logframe.ui
Code/iv_visualizer_frontend-main/source/Pipeline/: AnnotationPipe.cpp  AnnotationPipe.h  BlackImagePipe.cpp  BlackImagePipe.h  CMakeLists.txt  ColorDict.cpp  ColorDict.h  PipelineObject.cpp  PipelineObject.h  PipelineScene.cpp  PipelineScene.h  RegionOfInterestItem.cpp  RegionOfInterestItem.h  RegionOfInterestPipe.cpp  RegionOfInterestPipe.h  VideoPipe.cpp  VideoPipe.h
Code/iv_visualizer_frontend-main/source/VideoPlayer/: AskingAfterStreamThread.cpp  AskingAfterStreamThread.h  CMakeLists.txt  PainterSlider.cpp  PainterSlider.h  TwoSliderNavigator.cpp  TwoSliderNavigator.h  VideoNavigator.cpp  VideoNavigator.h  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerWidget.cpp  VideoPlayerWidget.h  twoslidernavigator.ui  videonavigator.ui  videoplayerwidget.ui
Code/iv_visualizer_frontend-main/source/ViewType/: AnnotationAndVideo.cpp  AnnotationAndVideo.h  AnnotationWithoutVideo.cpp  AnnotationWithoutVideo.h  CMakeLists.txt  OnlyVideo.cpp  OnlyVideo.h  ViewType.cpp  ViewType.h  ViewTypeEnum.h  ViewTypeFrame.cpp  ViewTypeFrame.h  ViewTypeFrameWidget.cpp  ViewTypeFrameWidget.h  viewtypeframe.ui  viewtypeframewidget.ui
Code/iv_visualizer_frontend-main/source/main/: CMakeLists.txt  IvVisualizerConf.conf  MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.ui
Code/iv_visualizer_frontend-main/tests/: CMakeLists.txt
Code/iv_visualizer_frontend-main/tests/unitTests/: CMakeLists.txt  StreamTest.cpp
Code/iv_visualizer_frontend-main/tests/unitTests/BackendConnector/: GrpcReaderTest.cpp  InitialisationMessageTest.cpp  TimeRange.cpp
(+22 files in other folders)
